infra/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
      - name: backend-storage
        hostPath:
          path: /home/omo/backend
          type: DirectoryOrCreate
      containers:
      - name: backend
        image: ghcr.io/oliverbutler/omo:2024-12-19T221918Z-ec88694
        ports:
        - containerPort: 6900
        volumeMounts:
        - name: backend-storage
          mountPath: /mnt/storage
        readinessProbe:
          httpGet:
            path: /health
            port: 6900
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 6900
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - port: 6900
      targetPort: 6900
      nodePort: 6900
