infra/temporal.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: temporal
  namespace: default
spec:
  serviceName: "temporal"
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      containers:
      - name: temporal
        image: temporalio/auto-setup:1.25.0
        ports:
        - containerPort: 7233
---
apiVersion: v1
kind: Service
metadata:
  name: temporal
  namespace: default
spec:
  selector:
    app: temporal
  ports:
    - port: 7233
      targetPort: 7233

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui
  template:
    metadata:
      labels:
        app: temporal-ui
    spec:
      containers:
      - name: temporal-ui
        image: temporalio/ui:2.30.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
  namespace: default
spec:
  selector:
    app: temporal-ui
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 8080
